# monge_ampere

./: .gitignore  README.md  pyproject.toml
examples/: benchmark_timing.py  demo_operators.ipynb  demo_swiss_roll_w2.ipynb  demo_wasserstein.ipynb
monge_ampere/: __init__.py  boundary.py  operators.py  optimal_transport.py  solvers.py
tests/: test_operators.py  test_solvers.py  test_wasserstein.py
