[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monge-ampere"
version = "0.1.0"
authors = [
  {name = "Leonardo Zepeda-Núñez", email = "lzepeda@melix.org"},
]
description = "Wasserstein-2 distance via Monge-Ampère equation solver"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
include = ["monge_ampere*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
